# depqdict

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml  python-app.yml
src/depqdict/: depqdict.py
src/heap_dict/: __init__.py  heapdict.py
tests/: __init__.py  test_heap.py  test_heapdict.py  utils.py
