[project]
name = "heap-dict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Eliot Robson", email = "eliot.robson24@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
test = [
    "ruff>=0.9.9",
]
