[project]
name = "heap-dict"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Eliot Robson", email = "eliot.robson24@gmail.com" }]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[dependency-groups]
dev = ["ruff>=0.9.9", "pytest>=8.3.3", "mypy>=1.15.0", "pytest-cov>=3.0.0"]


[tool.uv]
default-groups = ["dev"]
